네이버 맵 api 페이지

--- a/VueFolder/enjoy-project/index.html
+++ b/VueFolder/enjoy-project/index.html
@@ -26,6 +26,12 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- 네이버 지도 API -->
+    <script
+      type="text/javascript"
+      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wxa8m9c4uu"
+    ></script>
+
     <title>EnjoyTrip</title>
   </head>
   <body>
