--- a/VueFolder/enjoy-project/index.html
+++ b/VueFolder/enjoy-project/index.html
@@ -11,10 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Serif+Pro:wght@400;700&display=swap" rel="stylesheet" />
 
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/owl.carousel.min.css" />
@@ -27,10 +24,13 @@
     <link rel="stylesheet" href="/css/style.css" />
 
     <!-- 네이버 지도 API -->
-    <script
+    <!-- <script
       type="text/javascript"
       src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wxa8m9c4uu"
-    ></script>
+    ></script> -->
+
+    <!-- 카카오 맵 API -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=031d62f93a0d302ac9151ec448c8abfc"></script>
 
     <title>EnjoyTrip</title>
   </head>
